--- a/src/aoa_sandbox/configs/exp1.toml
+++ b/src/aoa_sandbox/configs/exp1.toml
@@ -1,22 +1,51 @@
 [simulation]
-fs_mic = 96000
+fs_mic = 48000
 up_fs = 1000000
 sound_file = "examples/gunshot1.wav"
 
 [source]
-pos = [10.0, 10.0, 10.0]
+position = [6378137.0, 10.0, 10.0]
 
-[[sensors]]
-name = "Node1"
-pos = [0.0, 0.0, 1.0]
-mics = [[0.0, 0.0, 0.0], [0.01, 0.0, 0.0], [0.01, 0.1, 0.0], [0.00, 0.01, 0.0]]
+[[sensor]]
+name = "SensorA"
+position = [6378137.0, 0.0, 0.0]      # ECEF meters
+quaternion = [0, 0, 0, 1]
+mics = [
+    [  0.05,  0.05, 0.0 ],
+    [ -0.05,  0.05, 0.0 ],
+    [ -0.05, -0.05, 0.0 ],
+    [  0.05, -0.05, 0.0 ]
+]
 
-[[sensors]]
-name = "Node2"
-pos = [3.0, 0.0, 2.0]
-mics = [[0.0, 0.0, 0.0], [0.01, 0.0, 0.0], [0.01, 0.1, 0.0], [0.00, 0.01, 0.0]]
+[[sensor]]
+name = "SensorB"
+position = [6378138.0, 0.0, 1.0]
+quaternion = [0, 0, 0, 1]
+mics = [
+    [  0.05,  0.05, 0.0 ],
+    [ -0.05,  0.05, 0.0 ],
+    [ -0.05, -0.05, 0.0 ],
+    [  0.05, -0.05, 0.0 ]
+]
 
-[[sensors]]
-name = "Node3"
-pos = [0.0, 3.0, 1.0]
-mics = [[0.0, 0.0, 0.0], [0.01, 0.0, 0.0], [0.01, 0.1, 0.0], [0.00, 0.01, 0.0]]
+[[sensor]]
+name = "SensorC"
+position = [6378138.0, 1.0, 2.0]
+quaternion = [0, 0, 0, 1]
+mics = [
+    [  0.05,  0.05, 0.0 ],
+    [ -0.05,  0.05, 0.0 ],
+    [ -0.05, -0.05, 0.0 ],
+    [  0.05, -0.05, 0.0 ]
+]
+
+[[sensor]]
+name = "SensorD"
+position = [6378137.0, 1.0, 3.0]
+quaternion = [0, 0, 0, 1]
+mics = [
+    [  0.05,  0.05, 0.0 ],
+    [ -0.05,  0.05, 0.0 ],
+    [ -0.05, -0.05, 0.0 ],
+    [  0.05, -0.05, 0.0 ]
+]
