--- a/src/aoa_sandbox/configs/no_coplanar.toml
+++ b/src/aoa_sandbox/configs/no_coplanar.toml
@@ -1,36 +1,41 @@
 [simulation]
 fs_mic = 96000
 up_fs = 1000000
-sound_file = "examples/gunshot2.wav"
 
 [source]
-position = [6378137.0, 1.0, 20.0]
+position = [6378137.0, 1.0, 10.0]
+spl_db = 100.0
+sound_file = "examples/gunshot1.wav"
 
 [[sensor]]
 name = "SensorA"
-position = [6378137.0, 0.0, 0.0]
-quaternion = [1.0, 0.0, 0.0, 0.0]
+position = [6378137.0, 0.0, 1.0]
+quaternion = [0.707, 0.0, -0.707, 0.0]
 mics = [
     [  0.05,  0.05, 0.00 ],
     [ -0.05,  0.05, 0.00 ],
     [ -0.05, -0.05, 0.00 ],
     [  0.05, -0.05, 0.05 ]
 ]
+mic_sensitivity = 0.05   # V/Pa (-26 dBV/Pa)
+gain = 100.0             # linear (+20 dB)
 
 [[sensor]]
 name = "SensorB"
-position = [6378139.0, 0.0, 0.0]
-quaternion = [0.0, 0.0, 0.0, 1.0]
+position = [6378147.0, 0.0, 3.0]
+quaternion = [0.707, 0.0, -0.707, 0.0]
 mics = [
     [  0.05,  0.05, 0.00 ],
     [ -0.05,  0.05, 0.00 ],
     [ -0.05, -0.05, 0.00 ],
     [  0.05, -0.05, 0.05 ]
 ]
+mic_sensitivity = 0.05   # V/Pa (-26 dBV/Pa)
+gain = 100.0             # linear (+20 dB)
 
 [[sensor]]
 name = "SensorC"
-position = [6378139.0, 2.0, 0.0]
+position = [6378147.0, 10.0, 0.0]
 quaternion = [0.707, 0.0, -0.707, 0.0]
 mics = [
     [  0.05,  0.05, 0.00 ],
@@ -38,10 +43,12 @@ mics = [
     [ -0.05, -0.05, 0.00 ],
     [  0.05, -0.05, 0.05 ]
 ]
+mic_sensitivity = 0.05   # V/Pa (-26 dBV/Pa)
+gain = 100.0             # linear (+20 dB)
 
 [[sensor]]
 name = "SensorD"
-position = [6378137.0, 2.0, 0.0]
+position = [6378137.0, 10.0, 0.0]
 quaternion = [0.707, 0.0, -0.707, 0.0]
 mics = [
     [  0.05,  0.05, 0.00 ],
@@ -49,10 +56,12 @@ mics = [
     [ -0.05, -0.05, 0.00 ],
     [  0.05, -0.05, 0.05 ]
 ]
+mic_sensitivity = 0.05   # V/Pa (-26 dBV/Pa)
+gain = 100.0             # linear (+20 dB)
 
 [[sensor]]
 name = "SensorE"
-position = [6378141.0, 1.0, 2.0]
+position = [6378157.0, 5.0, 0.0]
 quaternion = [0.707, 0.0, -0.707, 0.0]
 mics = [
     [  0.05,  0.05, 0.00 ],
@@ -60,3 +69,5 @@ mics = [
     [ -0.05, -0.05, 0.00 ],
     [  0.05, -0.05, 0.05 ]
 ]
+mic_sensitivity = 0.05   # V/Pa (-26 dBV/Pa)
+gain = 100.0             # linear (+20 dB)
