Frame-based AoA calculation

--- a/src/aoa_sandbox/configs/coplanar.toml
+++ b/src/aoa_sandbox/configs/coplanar.toml
@@ -4,18 +4,30 @@ up_fs = 1000000
 
 [source]
 position = [6378137.0, 1.0, 10.0]
-spl_db = 100.0
-sound_file = "examples/gunshot1.wav"
+spl_db = 80.0
+sound_file = "examples/gunshot2.wav"
+
+
+# [1.0, 0.0, 0.0, 0.0]   # no rotation (aligned with +x,y,z as default basis)
+# [0.0, 1.0, 0.0, 0.0]   # 180° rotation around +x
+# [0.0, 0.0, 1.0, 0.0]   # 180° rotation around +y
+# [0.0, 0.0, 0.0, 1.0]   # 180° rotation around +z
+# [0.707, 0.707, 0.0, 0.0]  # 90° rotation around +x
+# [0.707, -0.707, 0.0, 0.0] # -90° rotation around +x
+# [0.707, 0.0, 0.707, 0.0]  # 90° rotation around +y
+# [0.707, 0.0, -0.707, 0.0] # -90° rotation around +y
+# [0.707, 0.0, 0.0, 0.707]  # 90° rotation around +z
+# [0.707, 0.0, 0.0, -0.707] # -90° rotation around +z
 
 [[sensor]]
 name = "SensorA"
 position = [6378137.0, 0.0, 1.0]
-quaternion = [0.707, 0.0, -0.707, 0.0]
+quaternion = [0.707, 0.0, 0.707, 0.0]
 mics = [
-    [  0.05,  0.05, 0.00 ],
-    [ -0.05,  0.05, 0.00 ],
-    [ -0.05, -0.05, 0.00 ],
-    [  0.05, -0.05, 0.00 ]
+    [  0.03625,  0.03625, 0.00 ],
+    [ -0.03625,  0.03625, 0.00 ],
+    [ -0.03625, -0.03625, 0.00 ],
+    [  0.03625, -0.03625, 0.00 ]
 ]
 mic_sensitivity = 0.05   # V/Pa (-26 dBV/Pa)
 gain = 100.0             # linear (+20 dB)
@@ -23,12 +35,12 @@ gain = 100.0             # linear (+20 dB)
 [[sensor]]
 name = "SensorB"
 position = [6378147.0, 0.0, 3.0]
-quaternion = [0.707, 0.0, -0.707, 0.0]
+quaternion = [0.0, 1.0, 0.0, 0.0]
 mics = [
-    [  0.05,  0.05, 0.00 ],
-    [ -0.05,  0.05, 0.00 ],
-    [ -0.05, -0.05, 0.00 ],
-    [  0.05, -0.05, 0.00 ]
+    [  0.03625,  0.03625, 0.00 ],
+    [ -0.03625,  0.03625, 0.00 ],
+    [ -0.03625, -0.03625, 0.00 ],
+    [  0.03625, -0.03625, 0.00 ]
 ]
 mic_sensitivity = 0.05   # V/Pa (-26 dBV/Pa)
 gain = 100.0             # linear (+20 dB)
@@ -36,12 +48,12 @@ gain = 100.0             # linear (+20 dB)
 [[sensor]]
 name = "SensorC"
 position = [6378147.0, 10.0, 0.0]
-quaternion = [0.707, 0.0, -0.707, 0.0]
+quaternion = [0.707, 0.0, 0.0, -0.707]
 mics = [
-    [  0.05,  0.05, 0.00 ],
-    [ -0.05,  0.05, 0.00 ],
-    [ -0.05, -0.05, 0.00 ],
-    [  0.05, -0.05, 0.00 ]
+    [  0.03625,  0.03625, 0.00 ],
+    [ -0.03625,  0.03625, 0.00 ],
+    [ -0.03625, -0.03625, 0.00 ],
+    [  0.03625, -0.03625, 0.00 ]
 ]
 mic_sensitivity = 0.05   # V/Pa (-26 dBV/Pa)
 gain = 100.0             # linear (+20 dB)
@@ -51,10 +63,10 @@ name = "SensorD"
 position = [6378137.0, 10.0, 0.0]
 quaternion = [0.707, 0.0, -0.707, 0.0]
 mics = [
-    [  0.05,  0.05, 0.00 ],
-    [ -0.05,  0.05, 0.00 ],
-    [ -0.05, -0.05, 0.00 ],
-    [  0.05, -0.05, 0.00 ]
+    [  0.03625,  0.03625, 0.00 ],
+    [ -0.03625,  0.03625, 0.00 ],
+    [ -0.03625, -0.03625, 0.00 ],
+    [  0.03625, -0.03625, 0.00 ]
 ]
 mic_sensitivity = 0.05   # V/Pa (-26 dBV/Pa)
 gain = 100.0             # linear (+20 dB)
@@ -64,10 +76,10 @@ name = "SensorE"
 position = [6378157.0, 5.0, 0.0]
 quaternion = [0.707, 0.0, -0.707, 0.0]
 mics = [
-    [  0.05,  0.05, 0.00 ],
-    [ -0.05,  0.05, 0.00 ],
-    [ -0.05, -0.05, 0.00 ],
-    [  0.05, -0.05, 0.00 ]
+    [  0.03625,  0.03625, 0.00 ],
+    [ -0.03625,  0.03625, 0.00 ],
+    [ -0.03625, -0.03625, 0.00 ],
+    [  0.03625, -0.03625, 0.00 ]
 ]
 mic_sensitivity = 0.05   # V/Pa (-26 dBV/Pa)
 gain = 100.0             # linear (+20 dB)
